--- a/index.html
+++ b/index.html
@@ -4,34 +4,61 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Суюнов Шахриёр</title>
+<meta name="keywords" content="shahriyor, cv, resume">
+<meta name="description" content="Это сайт - резюме Суюнова Шахриёра">
+  <link rel="stylesheet" href="styles.css">
+  <title>Shahriyor Resume</title>
 </head>
 <body>
 
-  <img src="I.jpg" alt="Суюнов Шахриёр" width="250">
+  <div class="container">
 
-  <h1>Суюнов Шахриёр</h1>
+    <div class="info">
+     <img src="avatar.jpg" alt="Суюнов Шахриёр" class="avatar" >
+ 
+  <div class="info-text">
+     <h1>Суюнов Шахриёр</h1>
 
-  <p> Я начинающий <strong>Фронтенд-разработчик</strong> и в будущем хочу открыть свою <strong>IT компанию "SUNSHINE"</strong></p>
+     <p> Я начинающий <strong>Фронтенд-разработчик</strong> и в будущем хочу открыть свою <strong>IT компанию "SUNSHINE"</strong></p>
 
-  <p>Мне нравиться изучать что-то новое в сфере <em>технологий</em>. Стараюсь изучать <em>англиский язык и програмирование.</em></p>
+     <p>Мне нравиться изучать что-то новое в сфере <em>технологий</em>. Стараюсь изучать <em>англиский язык и програмирование.</em></p>
 
-  <h2>Мои хобби</h2>
-  <ol>
+    <div class="card">
+      <h4><strong>Социальные сети:</strong></h4>
+
+    <a href="https://t.me/mr_ssunshine" 
+    target="_blanks">Telegram</a>
+| 
+  <a href="https://t.me/mr_mmoon" target="_blanks">Telegram 2</a>
+|
+  <a href="https://api.whatsapp.com/send?phone=79663476145" target="_blanks" >WhatsApp</a>
+|
+  <a href="https://instagram.com/mr._sunshine?igshid=ZGUzMzM3NWJiOQ==" target="_blanks">Instagram</a></div>
+ </div>
+</div>
+
+   <div class="card bg-green">
+    <h2>Мои хобби</h2>
+
+  <ol class="list">
     <li>Чтение книг</li>
     <li>Изучение нового контента</li>
     <li>Изучение английского языка</li>
-    <li></li>
   </ol>
- 
+
+</div>
+
+<div class="card bg-red">
   <h3>Опыт работы</h3>
-  <table>
-    <thead>
+
+  <table class="table"> 
+    <!--<thead>
       <tr>
       <th>Название</th>
       <th>Должность</th>
       <th>Год</th>
-    </tr> </thead>
+    </tr>   
+  </thead>-->
       <thbody>
       <tr>
         <td>ЯпонаМама</td>
@@ -39,7 +66,7 @@
         <td>2021-2021</td>
       </tr>
       <tr>
-        <td>Перекресток</td>
+        <td>Перекрёсток</td>
         <td>Сборщик-комплектовщик</td>
         <td>2021-2023</td>
       </tr>
@@ -50,40 +77,59 @@
       </tr>
     </thbody>
     </table>
+</div>
 
-  <h4><strong>Социальных сети:</strong></h4>
+<div class="card bg-yellow">
+    <h2> Мои пройденные курсы</h2>
+      
+    <ul class="link-list">
+       <li>
+         <a href="https://stepik.org/course/52164/syllabus" 
+          target="_blanks">Основы HTML и CSS</a>
+        </li>
 
-  <a href="https://t.me/mr_ssunshine" 
-  target="_blanks">Telegram</a>
-|
-  <a href="https://t.me/mr_mmoon" target="_blanks">Telegram 2</a>
-|
-  <a href="https://api.whatsapp.com/send?phone=79663476145" target="_blanks">WhatsApp</a>
-|
-  <a href="https://instagram.com/mr._sunshine?igshid=ZGUzMzM3NWJiOQ==" target="_blanks">Instagram</a>
+       <li>
+        <a href="https://lk.result.school/teach/control/stream/view/id/695281059" 
+    target="_blanks">Профессия Джуниор Frontend-разработчик</a>
+      </li>
+      <li> 
+        <a href="https://stepik.org/course/121208/syllabus " target="_blanks">Вводный курс по веб-разработке от Факт.Академии</a
+       ></li>
+  </ul>
+</div>
 
- <p>Связаться со мной</p>
- <form>
-  <div>
-    <label for="text">Ваше имя:</label>
-    <input type="text" id="text" placeholder="Имя">
+ 
+ <form action="/" class="form">
+  <h2>Связаться со мной</h2>
+
+  <div class="form-row">
+  <div class="form-group">
+    <label for="name">Ваше имя:</label>
+    <input type="text" id="name" 
+    placeholder="Введите имя">
   </div>
-  <div>
+
+  <div class="form-group">
     <label for="email">Email:</label>
-  <input type="email" id="email" placeholder="Введите email">
+    <input type="email" id="email" 
+    placeholder="Введите email">
   </div>
-  <div>
+</div>
+  <div class="form-group">
     <label for="message">Ваше сообщение</label>
-    <br>
-    <textarea id="message" cols="25" rows="5"
+    <textarea id="message" cols="20" rows="5"
     placeholder="Введите сообщение..."></textarea>
   </div>
-  <button>Отправить</button>
 
-
-
-
-
+  <button class="btn">Отправить</button>
  </form>
-</body>
+
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ 
+  </div>
+ </body>
 </html>
