--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <meta name="keywords" content="shahriyor, cv, resume">
 <meta name="description" content="Это сайт - резюме Суюнова Шахриёра">
   <link rel="stylesheet" href="styles.css">
+  <link rel="Website Icon" href="bonfire.png">
   <title>Shahriyor Resume</title>
 </head>
 <body>
+  
 
   <div class="container">
 
@@ -26,18 +28,14 @@
     <div class="card">
       <h4><strong>Социальные сети:</strong></h4>
 
-    <a href="https://t.me/mr_ssunshine" 
-    target="_blanks">Telegram</a>
-| 
-  <a href="https://t.me/mr_mmoon" target="_blanks">Telegram 2</a>
+  <a href="https://t.me/mr_mmoon" target="_blanks">Telegram</a>
 |
-  <a href="https://api.whatsapp.com/send?phone=79663476145" target="_blanks" >WhatsApp</a>
-|
-  <a href="https://instagram.com/mr._sunshine?igshid=ZGUzMzM3NWJiOQ==" target="_blanks">Instagram</a></div>
+  <a href="mailto: wmr.sunshine@gmail.com"
+  target="_blanks">Gmail</a></div>
  </div>
 </div>
 
-   <div class="card bg-green">
+   <div class="card bg-blue">
     <h2>Мои хобби</h2>
 
   <ol class="list">
